--- a/Test 1.ipynb
+++ b/Test 1.ipynb
@@ -106,7 +106,7 @@
    "source": [
     "# Number of Unique Items\n",
     "\n",
-    "unique = purchase_df[\"Last Name\"].unique()\n",
+    "unique = data_file_df[\"IID\"].unique()\n",
     "unique\n"
    ]
   }
