--- a/Test 1.ipynb
+++ b/Test 1.ipynb
@@ -100,14 +100,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-af870677f405>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-af870677f405>\"\u001b[1;36m, line \u001b[1;32m5\u001b[0m\n\u001b[1;33m    count = data_file_df[]\u001b[0m\n\u001b[1;37m                         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Number of Unique Items\n",
+    "\n",
+    "unique = data_file_df[\"Item ID\"]. unique()\n",
+    "unique\n",
+    "\n",
+    "count = data_file_df[\"Item ID\"]. value_counts()\n",
+    "count\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Number of Unique Items\n",
-    "\n",
-    "unique = data_file_df[\"IID\"].unique()\n",
-    "unique\n"
+    "# Average Purchase Price\n",
+    "average = data_file_df[\"Price\"]. mean()\n",
+    "average"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Total Number of Purchases\n",
+    "Total_Purchases = len(open('Pandas-Challenge/HeroesofPymoli/purchase_data.csv') . readlines( ))\n",
+    "Print (Total_Purchases)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Total Revenue\n",
+    "Total = data_file_df[\"Price\"]. sum()\n",
+    "total"
    ]
   }
  ],
