--- a/Test 1.ipynb
+++ b/Test 1.ipynb
@@ -93,7 +93,6 @@
    "source": [
     "# Set Path to Data Set in a Variable\n",
     "\n",
-    "data_file = \"Pandas-Challenge/HeroesofPymoli/purchase_data.csv\"\n",
     "data_file_df = pd.read_csv(data_file)\n",
     "data_file_df.head()"
    ]
@@ -136,6 +135,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -155,6 +161,18 @@
     "# Total Revenue\n",
     "Total = data_file_df[\"Price\"]. sum()\n",
     "total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Percentage of Male Players\n",
+    "# Count of Male Players\n",
+    "count_male = data_file_df[\"Gender\"]. value_counts()\n",
+    "count_male"
    ]
   }
  ],
