--- a/Test 3.ipynb
+++ b/Test 3.ipynb
@@ -32,7 +32,8 @@
    "source": [
     "# Read Purchasing File and store into Pandas data frame\n",
     "\n",
-    "df =pd.DataFrame(data)"
+    "df =pd.DataFrame(data)\n",
+    "print (df)"
    ]
   },
   {
@@ -42,6 +43,7 @@
    "outputs": [],
    "source": [
     "# Set and Name Variables\n",
+    "\n",
     "PID = \"Purchase_ID\"\n",
     "Print (PID)\n",
     "\n",
@@ -93,6 +95,7 @@
    "source": [
     "# Set Path to Data Set in a Variable\n",
     "\n",
+    "data_file = \"Pandas-Challenge/HeroesofPymoli/purchase_data.csv\"\n",
     "data_file_df = pd.read_csv(data_file)\n",
     "data_file_df.head()"
    ]
@@ -128,6 +131,7 @@
    "outputs": [],
    "source": [
     "# Average Purchase Price\n",
+    "\n",
     "average = data_file_df[\"Price\"]. mean()\n",
     "average"
    ]
@@ -148,6 +152,7 @@
    "outputs": [],
    "source": [
     "# Total Number of Purchases\n",
+    "\n",
     "Total_Purchases = len(open('Pandas-Challenge/HeroesofPymoli/purchase_data.csv') . readlines( ))\n",
     "Print (Total_Purchases)"
    ]
@@ -159,6 +164,7 @@
    "outputs": [],
    "source": [
     "# Total Revenue\n",
+    "\n",
     "Total = data_file_df[\"Price\"]. sum()\n",
     "total"
    ]
@@ -169,10 +175,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Percentage of Male Players\n",
-    "# Count of Male Players\n",
-    "count_male = data_file_df[\"Gender\"]. value_counts()\n",
-    "count_male"
+    "# Count of Male/Female/Other\n",
+    "\n",
+    "count = data_file_df[\"Gender\"]. value_counts()\n",
+    "count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Percentage of Male/Female/Other\n",
+    "\n",
+    "def gender_percentages(data_file):\n",
+    "     a = 652\n",
+    "     b = 113\n",
+    "     c = 15\n",
+    "     d = Total_Players  \n",
+    "    \n",
+    "gender_percentages = (a / d) * 100\n",
+    "print (gender_percentages)\n",
+    "\n",
+    "gender_percentages = (b / d) * 100\n",
+    "print (gender_percentages)\n",
+    "\n",
+    "gender_percentages = (c / d) * 100\n",
+    "print (gender_percentages)\n",
+    "    \n",
+    "    "
    ]
   }
  ],
