--- a/Test 3.ipynb
+++ b/Test 3.ipynb
@@ -82,9 +82,8 @@
    "source": [
     "# Total Number of Players\n",
     "\n",
-    "Total_Players = len(open('Pandas-Challenge/HeroesofPymoli/purchase_data.csv') . readlines( ))\n",
-    "\n",
-    "Print (Total_Players)"
+    "name_list = data_file_df[\"SN\"]. value_counts()\n",
+    "name_list"
    ]
   },
   {
@@ -147,7 +146,7 @@
     "# Total Number of Purchases\n",
     "\n",
     "Total_Purchases = len(open('Pandas-Challenge/HeroesofPymoli/purchase_data.csv') . readlines( ))\n",
-    "Print (Total_Purchases)"
+    "Total_Purchases"
    ]
   },
   {
@@ -170,8 +169,7 @@
    "source": [
     "# Count of Male/Female/Other\n",
     "\n",
-    "count = data_file_df[\"Gender\"]. value_counts()\n",
-    "count"
+    "data_file_df[\"Gender\"]. value_counts()*****"
    ]
   },
   {
@@ -183,9 +181,9 @@
     "# Percentage of Male/Female/Other\n",
     "\n",
     "def gender_percentages(data_file):\n",
-    "     a = 652\n",
-    "     b = 113\n",
-    "     c = 15\n",
+    "     a = 484\n",
+    "     b = 81\n",
+    "     c = 11\n",
     "     d = Total_Players  \n",
     "    \n",
     "gender_percentages = (a / d) * 100\n",
@@ -198,6 +196,51 @@
     "print (gender_percentages)\n",
     "    \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Purchase Counts per Gender\n",
+    "\n",
+    "gender_list = data_file_df[\"Gender\"]. value_counts()\n",
+    "gender_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Average Purchase Price per Gender\n",
+    "\n",
+    "data_file_df[[\"Gender\", \"Price\"]].groupby(\"Gender\").mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Total Purchase Value per Gender\n",
+    "\n",
+    "data_file_df[[\"Gender\", \"Price\"]].groupby(\"Gender\").sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Average Purchase Total per Person by Gender\n",
+    "\n",
+    "\n"
    ]
   },
   {
